# Exercice---Requetez-des-services-IA

./: .gitignore  hf_token.env  huggingface_api_cloth_seg.ipynb  main.py  pyproject.toml
