[project]
name = "exercice-requetez-des-services-ia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.31.0",
    "jupyterlab>=4.5.7",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "requests>=2.32.5",
    "tqdm>=4.67.3",
    "transformers>=4.57.6",
]
